--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.4"
-tokio = { version = "1.0", features = ["full"] }
+axum = "0.8"
+tokio = { version = "1", features = ["full"] }
+tera = "1.19"
